--- a/hw7/p5.tex
+++ b/hw7/p5.tex
@@ -29,7 +29,7 @@
 
   \step
   Thus, $T$ \emph{non-deterministically} finds the factorization of $N$ in polynomial time.
-  If $P = NP$, then there exists some \emph{deterministic} turing machine that can also
+  but if $P = NP$, then there exists some \emph{deterministic} turing machine that can also
   find $p$ and $q$ in polynomial time, hence determine the factorization for any
   RSA number $N$ and, using the factorization, decrypt any RSA-encrypted message
   encrypted with the modulus $N$.
